# RegionNormalizedGrasp

./: demo.py  pyproject.toml
rng/customgraspnetAPI/utils/dexnet/grasping/: contacts.py  grasp.py  grasp_quality_config.py  grasp_quality_function.py  graspable_object.py  quality.py
rng/dataset/: base_grasp_dataset.py  config.py  evaluation.py  grasp.py  pc_dataset_tools.py  utils.py
rng/models/: losses.py
