[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rng"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "cupoch",
    "numpy>=1.23.5",
    "pandas",
    "matplotlib",
    "open3d",
    "opencv-python",
    "scikit-image",
    "tensorboardX",
    "torchsummary",
    "tqdm",
    "grasp_nms",
    "transforms3d",
    "trimesh",
    "autolab_core",
    "cvxopt",
    "numba",
    "torch>=1.10.0",
    "thop>=0.1.1.post2209072238",
]

[tool.setuptools]
packages = [
    "rng",
    "rng.models",
    "rng.dataset",
    "rng.customgraspnetAPI",
    "rng.customgraspnetAPI.utils",
    "rng.customgraspnetAPI",
    "rng.customgraspnetAPI.utils.dexnet",
    "rng.customgraspnetAPI.utils.dexnet.grasping",
    "rng.customgraspnetAPI.utils.dexnet.grasping.meshpy",
]

[tool.setuptools.package-data]
"*" = ["*.py"]
